# Hook

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
cmake/: detourConfig.cmake.in
docs/: HookContext.md  abi.md  doc.md
include/: hook.h
include/rezero/: detour.h
include/witch_cult/: detour.h  hook.h
tests/: CMakeLists.txt  test.cpp
